# axon-python-tictactoe

./: .gitignore  Dockerfile  README.md  backend.py  frontend.py  pyproject.toml  requirements.txt
adapter/: game_event_repository.py
application/: trainer.py
docker/: Dockerfile  docker-compose-axon.yaml  docker-compose.yaml  supervisord.conf
domain/game/: players.py  simulation.py  state.py
src/: backend.py  frontend.py  payloads.py
src/adapter/: game_event_repository.py
src/application/: trainer.py
src/domain/: decider.py
src/domain/game/: players.py
src/templates/: index.jinja2
src/templates/assets/: board.js  styles.css
templates/: index.jinja2
templates/assets/: board.js  styles.css
